correciones y modificaciones